Add depend raspicat

--- a/analog_distance_sensor_to_laserscan/CMakeLists.txt
+++ b/analog_distance_sensor_to_laserscan/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   nodelet
   pluginlib
+  raspicat
 )
 
 ## System dependencies are found with CMake's conventions
