--- a/analog_distance_sensor_to_laserscan/package.xml
+++ b/analog_distance_sensor_to_laserscan/package.xml
@@ -14,17 +14,11 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>pluginlib</build_depend>
-  <build_depend>raspicat</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>nodelet</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
-  <build_export_depend>raspicat</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>nodelet</exec_depend>
-  <exec_depend>raspicat</exec_depend>
-
+  <depend>raspimouse_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
